--- a/SportsLotteryTicket/SportsLotteryTicket/MyLottery(我的彩票)/Views/MyLottery.storyboard
+++ b/SportsLotteryTicket/SportsLotteryTicket/MyLottery(我的彩票)/Views/MyLottery.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xpC-K1-p2j">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--My Lottery View Controller-->
+        <!--My Lottery Nav Controller-->
         <scene sceneID="ksA-Tz-YSt">
             <objects>
-                <navigationController id="xpC-K1-p2j" customClass="HSFMyLotteryViewController" sceneMemberID="viewController">
+                <navigationController id="xpC-K1-p2j" customClass="HSFMyLotteryNavController" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fRZ-it-Dd1">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -23,7 +25,7 @@
         <!--我的彩票-->
         <scene sceneID="lzg-Rz-PoC">
             <objects>
-                <viewController id="hgO-Gh-B6y" sceneMemberID="viewController">
+                <viewController id="hgO-Gh-B6y" customClass="HSFMyLotteryVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="O5u-my-oiR"/>
                         <viewControllerLayoutGuide type="bottom" id="szd-Yd-9UB"/>
@@ -31,13 +33,72 @@
                     <view key="view" contentMode="scaleToFill" id="tJx-23-9tm">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" image="LoginScreen" translatesAutoresizingMaskIntoConstraints="NO" id="dUG-gY-dOA">
+                                <rect key="frame" x="152" y="74" width="296" height="138"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="138" id="4sQ-Vt-W9B"/>
+                                    <constraint firstAttribute="width" constant="296" id="b4T-Ic-dUs"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1iK-r4-DPq">
+                                <rect key="frame" x="16" y="222" width="568" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Hu7-0N-ux8"/>
+                                </constraints>
+                                <state key="normal" title="登录">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="dUG-gY-dOA" secondAttribute="centerX" id="3KK-Hf-WKy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="1iK-r4-DPq" secondAttribute="trailing" id="Apn-h7-eOJ"/>
+                            <constraint firstItem="dUG-gY-dOA" firstAttribute="top" secondItem="O5u-my-oiR" secondAttribute="bottom" constant="10" id="O3K-hf-cBW"/>
+                            <constraint firstItem="1iK-r4-DPq" firstAttribute="top" secondItem="dUG-gY-dOA" secondAttribute="bottom" constant="10" id="eAu-jR-kMp"/>
+                            <constraint firstItem="1iK-r4-DPq" firstAttribute="leading" secondItem="tJx-23-9tm" secondAttribute="leadingMargin" id="hCu-WH-Sox"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="我的彩票" id="HJS-fD-bV7"/>
+                    <navigationItem key="navigationItem" title="我的彩票" id="HJS-fD-bV7">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="woZ-qj-bWA">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="cuD-d9-caU">
+                                <rect key="frame" x="16" y="11" width="70" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <inset key="contentEdgeInsets" minX="-45" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="客服" image="FBMM_Barbutton">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="o0S-hH-TDG">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="eAD-k1-oDg">
+                                <rect key="frame" x="507" y="11" width="50" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="-46" maxY="0.0"/>
+                                <state key="normal" image="Mylottery_config">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="settingAction:" destination="hgO-Gh-B6y" eventType="touchUpInside" id="Eo7-GR-6Hw"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="loginBtn" destination="1iK-r4-DPq" id="AdI-QM-fJG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OXb-j5-2eM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-145" y="466"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="FBMM_Barbutton" width="13" height="13"/>
+        <image name="LoginScreen" width="296" height="138"/>
+        <image name="Mylottery_config" width="22" height="22"/>
+    </resources>
 </document>
